# ChordTool

./: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.h  chord.cpp  chord.h  main.cpp  main.ui  note.cpp  note.h
tests/: chord_test.cpp  note_test.cpp
